Fixes the navbar collapse overflow.

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ html, body {
 #navigation .navbar-collapse,
 #navigation .navbar-form {
     padding-right: 0;
-    /*overflow: hidden;*/
+    overflow-x: hidden;
 }
 
 body {
